--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Django~=4.0.6
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+dj-config-url==0.1.1
 Django==4.0.6
+gunicorn==20.1.0
 Pillow==9.2.0
+reportlab==3.6.12
 sqlparse==0.4.2
-reportlab~=3.6.12
+whitenoise==6.2.0
