--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,6 @@ WORKDIR /code
 # Install dependencies
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
-RUN mkdir -p /staticfiles
 
 # Copy project
-COPY . .
+COPY .. .
