--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 dj-config-url==0.1.1
 Django==4.0.6
+django-bulk-update==2.2.0
 gunicorn==20.1.0
 Pillow==9.2.0
 psycopg2==2.9.5
